2009-01-24  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic): add
	append-cxxflags() function

2009-01-19  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-go-mono): Add new go-mono.eclass
	(ebuild-mode-keywords-mono): Add new mono.eclass

2009-01-07  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.11 released.

2009-01-05  Ulrich Mueller  <ulm@gentoo.org>

	* Makefile (PV): Extract PV from lisp instead of ChangeLog, so
	that I won't forget updating it anymore (it was wrong in 1.10).

	* gentoo-syntax.el: Update version number and copyright years.
	(ebuild-mode-menu): Define variable to avoid a compiler warning.
	(ebuild-mode-ekeyword-complete): Account for completion-boundaries
	in GNU Emacs 23. Substitute the test-completion function in case
	it is undefined (it's missing in Emacs 21 and XEmacs). Don't use
	character classes in regexps since XEmacs doesn't support them.

2009-01-04  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el: join the two independent kde function
	definitions

2008-12-30  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-java-utils-2):
	Add EANT_NEEDS_TOOLS variable

2008-12-27  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.10 released.

2008-11-14  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-gems):
	Add gems.eclass' functions

2008-10-29  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-font-lock-keywords)
	(eselect-mode-font-lock-keywords): Move definitions from
	{ebuild,eselect}-mode-keywords.el to here to avoid warnings
	during byte-compilation.

2008-10-27  Christian Faulhammer  <opfer@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	add python_need_rebuild function
	(ebuild-mode-keywords-autotools): add WANT_AUTOCONF and
	WANT_AUTOMAKE variables