@@ -1,11 +1,18 @@
+2009-01-27  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-before-save): New hook function,
+	collecting all actions to be done before saving.
+	(ebuild-mode, eselect-mode): Call it.
+
 2009-01-24  Christian Faulhammer  <fauli@gentoo.org>
 
-	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic): add
-	append-cxxflags() function
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic):
+	add append-cxxflags() function
 
 2009-01-19  Christian Faulhammer  <fauli@gentoo.org>
 
-	* ebuild-mode-keywords.el (ebuild-mode-keywords-go-mono): Add new go-mono.eclass
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-go-mono):
+	Add new go-mono.eclass
 	(ebuild-mode-keywords-mono): Add new mono.eclass
 
 2009-01-07  Ulrich Mueller  <ulm@gentoo.org>
